# jira_branch_creator

./: .gitignore  CLAUDE.md  README.md  SKILL.md  main.py  pyproject.toml
.claude/skills/jira-branch-creator/: SKILL.md
.claude/skills/jira-branch-creator/references/: BRANCH_NAMING.md  COMMIT_MESSAGE.md
.claude/skills/jira-branch-creator/scripts/: README.md  get_issue_info.py  make_branch_name.py  validate_issue_key.py
assets/: config.template.json
references/: BRANCH_NAMING.md  COMMIT_MESSAGE.md  LOG_FORMAT.md
scripts/: commit.ps1  create_branch_from_jira.ps1  create_branch_from_jira.sh  create_branches_from_sscve.py  create_branches_from_sscve_todo.py  setup.ps1  setup.sh  sync_and_create_branches.py  sync_intqa_to_sscve.py  test_validate.py  watch_intqa_and_sync.py  watch_jira.ps1  watch_jira.py
src/jira_branch_creator/: __init__.py  config.py  exceptions.py  tray.py
src/jira_branch_creator/facades/: __init__.py  workflow_facade.py
src/jira_branch_creator/models/: __init__.py  issue.py
src/jira_branch_creator/services/: __init__.py  gitlab_service.py  jira_service.py
src/jira_branch_creator/utils/: branch_naming.py
tests/: test_branch_naming.py
