[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[project]
name = "jira-branch-creator"
version = "1.2.0"
description = "Jira 이슈에서 로컬 Git 브랜치를 자동으로 생성하는 Agent Skill"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "suiiim" }
]
dependencies = [
    "requests>=2.32.5",
]
