[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jira_branch_creator"]

[project]
name = "jira-branch-creator"
version = "2.0.0"
description = "Jira 이슈 관리 및 GitLab 브랜치 자동 생성 도구"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "suiiim" }
]
dependencies = [
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
jira-branch = "jira_branch_creator.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
